<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000" >

        <TextView
            android:id="@+id/editContactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_5dp"
            android:text="@string/edit_contact"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFF"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_5dp">
            <requestFocus/>
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/LastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_5dp">
            <requestFocus/>
        </EditText>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fullPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:padding="@dimen/padding_5dp">
            <requestFocus/>
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fullAvatarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avatar"
            android:layout_weight="1"
            android:padding="@dimen/padding_5dp"/>

        <ImageView
            android:id="@+id/avatar"
            android:layout_height="120dp"
            android:layout_width="40dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

    </TableRow>


    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_picture"
            android:onClick="editPicture"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/editButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/button_save_contact"
            android:onClick="editContact"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:onClick="deleteContact"
            android:layout_weight="1"
            />


    </TableRow>

</TableLayout>
